Update 50 하이브리드 렌더링.md

--- a/Study Notes/50 하이브리드 렌더링.md
+++ b/Study Notes/50 하이브리드 렌더링.md
@@ -1,1 +1,97 @@
+# 하이브리드 렌더링
 
+### 📅 날짜:
+
+> 2025.09.15 (월)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> Next.js에서 SSG + SSR, SSG + CSR 하이브리드 패턴과 효율적 캐싱 전략
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **SSG + SSR 하이브리드 패턴**
+- 동적 페이지지만 변하지 않는 데이터의 경우, `generateStaticParams` 사용하여 **빌드타임에 미리 페이지 생성**
+- Full Route Cache 적용 → 초기 로딩 빠름
+- `fetch` 옵션은 `force-cache` 사용
+- 예시: 포켓몬 도감처럼 데이터가 거의 변하지 않는 상세 페이지
+- **SSG + CSR 하이브리드 패턴 (TanStack Query 활용)**
+    - 서버에서 사전 fetch 후 캐시를 생성 → 클라이언트에서 **dehydrate → hydrate**
+    - **SEO**: 100% 프리렌더링 유지
+    - **UX 향상**:
+        - 캐시(queryData)로 돌아왔을 때 빠른 화면 렌더링
+        - 백그라운드에서 최신 데이터 fetch 가능
+
+## 📊 핵심 요약 표
+
+| 패턴 | 목적/설명 | 특징 | 예시/적용 |
+| --- | --- | --- | --- |
+| SSG + SSR | 변하지 않는 동적 페이지를 빌드타임에 생성 | Full Route Cache, force-cache | 포켓몬 도감 상세페이지, `generateStaticParams` |
+| SSG + CSR | 서버 fetch 후 클라이언트에서 hydrate | SEO 유지 + 빠른 UX, 백그라운드 업데이트 가능 | TanStack Query prefetch → dehydrate → HydrationBoundary |
+
+### 💻 실습 내용 정리
+
+- **SSG + SSR: generateStaticParams**
+
+```jsx
+// page.jsx
+export function generateStaticParams() {
+  return [{ id: "1" }, { id: "2" }, { id: "3" }];
+}
+```
+
+- id 1~3 페이지는 빌드타임에 미리 캐싱
+- `fetch` 시 `force-cache` 옵션 사용
+1. **SSG + CSR: TanStack Query**
+
+```jsx
+// app/posts/page.jsx
+import {
+  dehydrate,
+  HydrationBoundary,
+  QueryClient,
+} from '@tanstack/react-query'
+import Posts from './posts'
+
+export default async function PostsPage() {
+  const queryClient = new QueryClient()
+
+  await queryClient.prefetchQuery({
+    queryKey: ['posts'],
+    queryFn: getPosts,
+  })
+
+  return (
+    <HydrationBoundary state={dehydrate(queryClient)}>
+      <Posts />
+    </HydrationBoundary>
+  )
+}
+```
+
+- 서버에서 미리 데이터를 fetch → 클라이언트에 전달
+- HydrationBoundary에서 클라이언트 측 hydrate 수행
+- SEO와 UX 모두 확보
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- generateStaticParams와 동적 route를 혼동 → 변하지 않는 데이터만 사전 캐싱
+- TanStack Query prefetch 후 클라이언트 hydrate 과정 이해 필요 → HydrationBoundary 사용으로 해결
+
+### 💡 느낀 점 / 배운 점:
+
+- 하이브리드 패턴으로 SSR, SSG, CSR 장점을 동시에 활용 가능
+- 데이터 특성과 변경 빈도에 따라 적절한 캐싱 전략 선택 중요
+- UX 최적화와 SEO를 동시에 고려할 수 있는 패턴 이해
+
+### 🏷️ 키워드 (태그):
+
+`#Next.js` `#SSG` `#SSR` `#CSR` `#Hybride Rendering` `#generateStaticParams` `#TanStack Query` `#prefetch` `#dehydrate` `#hydrate` `#SEO` `#UX 최적화` 
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-09-15 | SSG + SSR / CSR 하이브리드 | SSG + SSR: Full Route Cache, generateStaticParams. SSG + CSR: TanStack Query prefetch → dehydrate → hydrate | generateStaticParams 적용, TanStack Query prefetch + HydrationBoundary 사용 | SSR/CSR 하이브리드 이해, SEO + UX 최적화 가능 | `#Next.js` `#SSG` `#SSR` `#CSR` `#generateStaticParams` `#TanStack Query` `#SEO` `#UX` | ✅ |
