--- a/Weekly Paper/Week 13/S3 버킷.md
+++ b/Weekly Paper/Week 13/S3 버킷.md
@@ -1,1 +1,108 @@
+# 📦 S3 버킷의 사용 사례와 주의할 점
 
+## ⭐ S3 버킷이란?
+
+Amazon S3(Simple Storage Service)는 AWS에서 제공하는 객체 스토리지 서비스로, 파일을 안전하게 저장하고 다양한 방식으로 접근할 수 있도록 하는 서비스입니다. 확장성, 내구성, 안정성이 높아 여러 목적에 활용됩니다.
+
+---
+
+## 📘 S3 버킷의 주요 사용 사례
+
+### 1) **정적 웹 호스팅**
+
+- HTML, CSS, JS 같은 정적 파일을 저장하여 웹사이트를 호스팅할 수 있습니다.
+- CloudFront와 함께 사용해 성능과 보안을 강화할 수 있습니다.
+
+### 2) **백업 및 아카이빙**
+
+- 이미지, 로그, 데이터베이스 백업 파일 등 장기 저장이 필요한 데이터를 보관하는 데 많이 사용됩니다.
+- Glacier와 함께 활용해 비용 효율적으로 장기 보관 가능.
+
+### 3) **대용량 데이터 저장소**
+
+- 빅데이터 분석용 원본 데이터를 저장하는 “데이터 레이크”로 사용됩니다.
+- Athena, EMR, Redshift Spectrum 등과 연동해 분석 작업 수행 가능.
+
+### 4) **애플리케이션 파일 저장소**
+
+- 이미지, 동영상, 문서 등 사용자 업로드 파일을 저장하는 용도로 많이 사용됨.
+- EC2, Lambda, 모바일 앱 등 다양한 환경에서 접근 가능.
+
+### 5) **로그 저장소**
+
+- ELB, CloudTrail, VPC Flow Logs 등 AWS 서비스 로그 저장.
+- 중앙 저장소 역할을 하며 분석 파이프라인 구성에 용이.
+
+---
+
+## ⚠️ S3 버킷 사용 시 주의할 점
+
+### 1) **퍼블릭 접근 차단 설정 필수**
+
+- 실수로 버킷을 전체 공개하면 심각한 보안 사고 발생 가능.
+- AWS는 기본적으로 “퍼블릭 액세스 차단(BPA)” 기능을 제공 → 활성화 권장.
+
+### 2) **정교한 IAM 정책 관리**
+
+- 불필요한 액세스를 허용하지 않도록 최소 권한 원칙(Least Privilege) 적용.
+- 사용자, 역할, 서비스의 권한을 명확히 구분하여 설계해야 함.
+
+### 3) **버킷 정책과 ACL 혼동 주의**
+
+- ACL은 가급적 사용하지 않고, 버킷 정책(IAM 정책 기반)으로만 관리하는 것을 권장.
+
+### 4) **버전 관리(Versioning) 사용 고려**
+
+- 실수로 파일 삭제 또는 덮어쓰기 했을 때 복구할 수 있도록 Versioning 활성화 필요.
+
+### 5) **암호화 필수**
+
+- 정적 암호화(SSE-S3, SSE-KMS) 적용해 데이터 보안을 강화.
+- 전송 중 암호화(HTTPS) 또한 반드시 사용해야 함.
+
+### 6) **요금 관리 주의**
+
+- 저장 용량, 요청 수, 데이터 전송량에 따라 비용이 증가할 수 있음.
+- Lifecycle 정책으로 오래된 데이터를 Glacier로 이동해 비용 절감 가능.
+
+### 7) **CORS 설정 주의**
+
+- 프론트엔드에서 S3 파일에 직접 접근할 때 CORS 설정이 필요.
+- 필요 이상으로  허용하지 말고 최소 범위로 설정해야 함.
+
+---
+
+## ✅ 요약
+
+S3는 정적 웹 호스팅, 백업, 데이터 레이크, 파일 저장 등 다양한 용도로 활용되며, 사용 시 **보안 설정·권한 관리·버전 관리·암호화·비용 관리** 등을 반드시 주의해야 하는 핵심 리소스입니다.
+
+원하면 **노션 스타일 정리**, **표 정리**, **퀴즈 형태**, **실습 설명** 등으로 다시 구성해줄게!
+
+# 모범 답안
+
+# 📦 S3 버킷의 사용 사례와 주의할 점
+
+**Amazon S3는 객체 스토리지 서비스로, 다양한 사용 사례에서 활용됩니다.**
+
+예를 들어, 정적 웹사이트 호스팅으로 S3를 사용하여 HTML, CSS, JavaScript 파일을 저장하고 전 세계에 분산하여 저렴한 비용으로 웹사이트를 제공할 수 있습니다. 또한, 기업의 백업 및 복구 솔루션으로 활용되어 중요한 데이터를 안전하게 저장하고, 필요 시 쉽게 복구할 수 있습니다. 대용량 데이터를 저장하고 분석하기 위한 빅데이터 플랫폼과 통합하여 로그 데이터 분석이나 실시간 데이터 처리에도 사용됩니다.
+
+S3를 사용할 때 주의할 점은 다음과 같습니다.
+
+- **보안 설정을 철저히 관리해야 합니다.**
+    
+    S3 버킷에 대한 접근 권한은 기본적으로 비공개로 설정되어야 하며, 필요한 경우에만 제한적으로 공개해야 합니다. 버킷 정책과 IAM 정책을 적절히 구성하여 불필요한 접근을 차단해야 합니다.
+    
+- **데이터 전송 및 저장량에 따른 비용을 고려해야 합니다.**
+    
+    S3의 요금은 저장 공간 사용량, 요청 수, 데이터 전송량에 따라 달라지므로, 비용 효율성을 높이기 위한 전략을 세우는 것이 중요합니다.
+    
+- **데이터 일관성 모델을 이해해야 합니다.**
+    
+    어플리케이션 요구사항에 맞게 선택하고, 동시 접근 상황에서의 동작 방식을 고려해야 합니다.
+    
+- **데이터 무결성 관리 기능 활용이 중요합니다.**
+    
+    객체 버전 관리(Versioning), 라이프사이클 정책(Lifecycle Policy), 크로스-리전 복제(CRR) 같은 기능을 적절히 사용하면 데이터의 내구성과 안정성을 크게 높일 수 있습니다.
+    
+
+예를 들어, 대규모 미디어 회사가 사용자 생성 콘텐츠를 S3에 저장하며, 각 파일에 대한 액세스를 제어하기 위해 IAM 역할을 구성하고, 지역별로 데이터 복제를 설정하여 데이터 가용성과 내구성을 높이는 경우가 있습니다.
