Update 51 캐싱 매커니즘.md

--- a/Study Notes/51 캐싱 매커니즘.md
+++ b/Study Notes/51 캐싱 매커니즘.md
@@ -1,1 +1,115 @@
+# 캐싱 매커니즘
 
+### 📅 날짜:
+
+> 2025.09.16 (화)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> Next.js에서 Route Cache, Full Route Cache, Request Memoization, Data Cache 등 서버/클라이언트 캐싱 구조 이해 및 활용
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **캐싱 흐름**
+    1. **첫 요청**
+        - Route Cache 확인 → MISS → Full Route Cache 확인 → HIT/새 렌더링
+    2. **렌더링 과정**
+        - fetch 요청 발생
+        - Request Memoization 확인 → MISS 시 결과 저장
+        - Data Cache 확인 → MISS 시 원본 데이터 가져와 저장
+    3. **렌더링 결과 저장**
+        - Full Route Cache(디스크) 및 Route Cache(메모리)에 SET
+    4. **사용자 응답**
+        - HTML + RSC Payload 전송
+        - 다음 방문 시 대부분 HIT로 빠른 응답
+- **캐시 종류**
+    1. **Route Cache**: 브라우저 세션 내 RSC Payload 저장, 빠른 페이지 전환 가능, SSR 페이지도 HIT 가능
+    2. **Full Route Cache**: 서버 컴포넌트 렌더링 결과 저장, SSG/ISR/generateStaticParams 적용
+    3. **Request Memoization**: 같은 렌더링 사이클 내 fetch 요청 일시적 캐싱
+    4. **Data Cache**: fetch로 가져온 외부 데이터 저장, 서버 컴포넌트에서 적용
+- **캐시 무효화**
+    - `revalidatePath()` → 특정 경로 캐시 제거
+    - `revalidateTag()` → 특정 태그 데이터 캐시 제거
+    - `router.refresh()` → 클라이언트에서 현재 경로 새로고침
+
+## 📊 핵심 요약 표
+
+- **캐시 관련 주요 용어**
+    
+    
+    | 용어 | 설명 |
+    | --- | --- |
+    | Data Source | 외부 DB, API 등 원본 데이터 |
+    | MISS / HIT / SET | 캐시 상태 표시: MISS = 없음, HIT = 있음, SET = 저장 |
+    | Build Time / Request Time | 빌드 시점 vs 사용자 요청 시점 |
+    
+    | 캐시 종류 | 위치 | 특징 | 적용 예시 |
+    | --- | --- | --- | --- |
+    | Route Cache | 클라이언트 메모리 | RSC Payload 저장, 페이지 전환 속도 향상 | SSR 페이지 재방문 |
+    | Full Route Cache | 서버 디스크 | HTML + RSC Payload 저장, SSG/ISR/generateStaticParams 적용 | SSG 페이지, pre-rendered dynamic pages |
+    | Request Memoization | 서버/렌더링 사이클 | 동일 fetch 요청 재사용 | 동일 렌더링 사이 fetch 호출 |
+    | Data Cache | 서버 | 외부 데이터(API, DB) 캐싱 | fetch(url, { cache: "force-cache" }) |
+
+### 💻 실습 내용 정리
+
+1. **Request Memoization**
+
+```jsx
+async function Page() {
+  const data1 = await fetch('https://api.example.com/data', { cache: 'force-cache' });
+  const data2 = await fetch('https://api.example.com/data', { cache: 'force-cache' }); // HIT!
+  const result1 = await data1.json();
+  const result2 = await data2.json();
+}
+```
+
+1. **React cache 활용**
+
+```jsx
+import { cache } from 'react'
+
+export const getUser = cache(async (id) => {
+  const user = await db.query(...);
+  return transformUserData(user);
+})
+```
+
+1. **캐시 무효화 예시**
+
+```jsx
+import { revalidatePath, revalidateTag } from 'next/cache';
+import { router } from 'next/router';
+
+// 특정 경로 무효화
+revalidatePath('/posts');
+
+// 특정 태그 데이터 무효화
+revalidateTag('post');
+
+// 클라이언트에서 현재 경로 새로고침
+router.refresh();
+```
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- Route Cache와 Full Route Cache 구분 혼동 → Route Cache = 메모리, Full Route Cache = 서버 디스크 저장
+- SSR 페이지도 캐시 HIT가 가능 → `no-store` 옵션 사용 시 제외
+- Request Memoization과 Data Cache 혼동 → Memoization = 렌더링 사이클 내, Data Cache = fetch 결과 서버 저장
+
+### 💡 느낀 점 / 배운 점:
+
+- Next.js 캐싱 구조 이해 → 페이지 로딩 최적화 가능
+- 다양한 캐시 계층과 옵션(force-cache, no-store)을 적절히 사용하면 UX와 성능 향상
+- 서버/클라이언트 캐시 동작 원리를 이해해야 효율적인 데이터 패칭 전략 수립 가능
+
+### 🏷️ 키워드 (태그):
+
+`#Next.js` `#캐싱` `#Route Cache` `#Full Route Cache` `#Request Memoizatio` `#Data Cache` `#RSC Payload` `#SSR` `#SSG` `#ISR` `#캐시 무효화` `#revalidatePath` `#revalidateTag`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-09-16 | Next.js 캐싱 매커니즘 | Route Cache, Full Route Cache, Request Memoization, Data Cache, 캐시 무효화 이해 | fetch Request Memoization, React cache, revalidatePath/Tag/Router.refresh 사용 | Route Cache vs Full Route Cache 혼동, SSR도 캐시 HIT 가능 이해 | `#Next.js` `#캐싱` `#Route Cache` `#Full Route Cache` `#Request Memoization` `#Data Cache` `#RSC Payload` `#SSR` `#SSG` `#ISR` | ✅ |
