--- a/Study Notes/59 페이지네이션.md
+++ b/Study Notes/59 페이지네이션.md
@@ -1,1 +1,101 @@
+# 페이지네이션
 
+### 📅 날짜:
+
+> 2025.09.26 (금)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> Pagination (데이터 분할 표시 기법)
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- 대량 데이터를 한 번에 보여주면 성능 부하 → 일부만 **나누어** 가져오기 필요
+- 주요 요소:
+    - 페이지당 항목 수 (Items per Page)
+    - 총 데이터 개수 (Total Count)
+    - 전체 페이지 수 (Total Pages)
+    - 현재 페이지 번호 (Page Number)
+    - 이전/다음 페이지 이동
+- **프론트 → page 번호 전달 → 백엔드 → 해당 데이터 반환** 구조
+
+## 📊 핵심 요약 표
+
+| 요소 | 설명 | 비고 |
+| --- | --- | --- |
+| Items per Page | 한 페이지에 보여줄 데이터 개수 | 기획 단계에서 결정 |
+| Total Count | 전체 데이터 수 | 서버에서 받아옴 |
+| Total Pages | 전체 페이지 수 | `TotalCount / ItemsPerPage` |
+| Page Number | 현재 페이지 번호 | 상태 관리 필요 |
+| Prev / Next | 페이지 이동 버튼 | 경계 조건 체크 필요 |
+
+### 💻 실습 내용 정리
+
+**Pagination 컴포넌트 예시**
+
+```jsx
+export default function Pagination({ totalPages, page, setPage }) {
+  return (
+    <div style={{ display: "flex", justifyContent: "center", marginTop: "20px" }}>
+      <buttononClick={() => setPage((prev) => Math.max(prev - 1, 1))}
+        disabled={page === 1}
+      >
+        prev
+      </button>
+
+      {[...Array(totalPages)].map((_, index) => (
+        <buttonkey={index + 1}
+          onClick={() => setPage(index + 1)}
+          style={{
+            fontWeight: page === index + 1 ? "bold" : "normal",
+            margin: "0 5px",
+          }}
+        >
+          {index + 1}
+        </button>
+      ))}
+
+      <buttononClick={() => setPage((prev) => Math.min(prev + 1, totalPages))}
+        disabled={page === totalPages}
+      >
+        next
+      </button>
+    </div>
+  );
+}
+```
+
+**백엔드 응답 예시**
+
+```json
+{
+  "data": [ /* 현재 페이지 데이터 */ ],
+  "totalPages": 10,
+  "currentPage": 3,
+  "totalCount": 100
+}
+```
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- `전체 페이지 수` 계산할 때 소수점 올림을 적용해야 함 (`Math.ceil`).
+- 프론트 단에서 단순히 `Array(totalPages)`로 페이지 버튼 생성하면 UX 간소화 가능.
+- `prev/next` 버튼은 **경계 조건(1, totalPages)** 체크 필요.
+
+### 💡 느낀 점 / 배운 점:
+
+- **페이지네이션은 단순히 UI 문제가 아니라 서버와 협업이 중요한 패턴**임을 깨달음.
+- 프론트에서 상태 관리 + 백엔드에서 데이터 분할 제공이 맞물려야 효율적.
+- 실제 서비스에서 필수적인 기능이므로 확실히 이해하고 익혀야 함.
+
+### 🏷️ 키워드 (태그):
+
+`#Pagination` `#Frontend` `#Backend` `#React` `#UX` `#데이터분할`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-09-26 | Pagination | 대량 데이터 분할 표시, 주요 요소(Items/Page, TotalCount 등) | React Pagination 컴포넌트 구현, 서버 응답 구조 이해 | 페이지 수 계산 시 올림 처리, prev/next 경계 조건 처리, 서버-프론트 협업 중요성 인식 | `#Pagination` `#React` `#Frontend` `#Backend` | ✅ |
