Update 60 더보기, 무한스크롤.md

--- a/Study Notes/60 더보기, 무한스크롤.md
+++ b/Study Notes/60 더보기, 무한스크롤.md
@@ -103,5 +103,4 @@ const { ref } = useInView({
 
 | 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
 | --- | --- | --- | --- | --- | --- | --- |
-| 2025-09-29 | 더보기 / 무한스크롤 | useInfiniteQuery 기반 데이터 누적 관리, hasNextPage로 UI 제어, IO를 통한 자동 로드 | 더보기 버튼 구현, getNextPageParam 두 가지 방식, IntersectionObserver 활용 | 총 데이터 모르는 경우 판별 로직 주의, 무한스크롤 트리거 ref 위치 확실히 이해 | `#InfiniteScroll`
- `#React` `#TanStackQuery` | ✅ |
+| 2025-09-29 | 더보기 / 무한스크롤 | useInfiniteQuery 기반 데이터 누적 관리, hasNextPage로 UI 제어, IO를 통한 자동 로드 | 더보기 버튼 구현, getNextPageParam 두 가지 방식, IntersectionObserver 활용 | 총 데이터 모르는 경우 판별 로직 주의, 무한스크롤 트리거 ref 위치 확실히 이해 | `#InfiniteScroll` `#React` `#TanStackQuery` | ✅ |
