--- a/Study Notes/63 세션 vs 토큰 기반 인증.md
+++ b/Study Notes/63 세션 vs 토큰 기반 인증.md
@@ -1,1 +1,59 @@
+# 세션 vs 토큰 기반 인증
 
+### 📅 날짜:
+
+> 2025.10.02 (목)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> 세션 기반 인증 / 토큰 기반 인증
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- **세션 기반 인증**: 서버가 세션 저장, 클라이언트는 `session_id` 쿠키로 인증
+- **토큰 기반 인증**: 서버가 토큰 발급, 클라이언트가 토큰 보관 후 `Authorization 헤더`로 인증
+- **차이점**: 서버 부하/확장성/RESTful 적합성에서 토큰 기반이 우세, 무효화는 세션 기반이 용이
+
+## 📊 핵심 요약 표
+
+| 구분 | 세션 기반 인증 | 토큰 기반 인증 |
+| --- | --- | --- |
+| 인증 방식 | 서버에 세션 저장 | 토큰 자체에 정보 포함 |
+| 서버 부하 | 높음 (세션 확인 필요) | 낮음 (토큰 검증만) |
+| 확장성 | 낮음 (세션 동기화 필요) | 높음 (상태 비저장) |
+| RESTful 적합성 | 낮음 | 높음 |
+| 무효화 | 쉬움 (세션 삭제) | 어려움 (토큰 만료 대기) |
+| 보안 | 세션 하이재킹 가능성 | 만료·서명 검증으로 보완 |
+
+### 💻 실습 내용 정리
+
+- **세션 기반 인증 흐름**
+1. 로그인 성공 시 서버에서 세션 저장 후 `session_id`를 쿠키에 담아 응답
+2. 요청마다 쿠키에 담긴 `session_id` 확인 → 세션 만료 시 로그인 만료 처리
+- **토큰 기반 인증 흐름**
+    1. 로그인 성공 시 `access token` 생성 (비밀키로 서명)
+    2. 클라이언트는 토큰을 로컬스토리지에 저장
+    3. 요청 시 `Authorization: Bearer <token>` 헤더로 전송
+    4. 서버는 토큰 서명 검증 후 유저 식별
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- 세션은 **서버가 상태를 기억**, 토큰은 **서버가 상태를 기억하지 않음** → RESTful 설계 차이 이해
+- 토큰 무효화가 어려운 이유: 이미 발급된 토큰은 만료 전까지 유효 → 로그아웃 설계 시 주의 필요
+
+### 💡 느낀 점 / 배운 점:
+
+- 세션 기반 인증은 직관적이지만 확장성이 떨어지고, 토큰 기반은 무상태로 대규모 서비스에 적합
+- 결국 현대 서비스는 **토큰 기반 인증(JWT)**을 주로 사용한다는 점이 핵심
+
+### 🏷️ 키워드 (태그):
+
+`#세션인증` `#토큰인증` `#JWT` `#RESTful` `#인증방식비교` `#보안`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-10-02 | 세션 vs 토큰 인증 | 세션=서버 저장, 토큰=클라이언트 저장, 토큰 기반이 RESTful에 적 | 세션: session_id 쿠키 / 토큰: Bearer 토큰 헤더 | 세션은 무효화 쉬움, 토큰은 확장성 뛰어남 → 현대 웹은 토큰 선호 | `#세션인증` `#토큰인증` `#JWT` | ✅ |
