Update 72 파일 업로드.md

--- a/Study Notes/72 파일 업로드.md
+++ b/Study Notes/72 파일 업로드.md
@@ -1,1 +1,161 @@
+# 파일 업로드
 
+### 📅 날짜:
+
+> 2025.10.15 (수)
+> 
+
+### 📘 오늘 공부한 주제:
+
+> Express에서의 파일 업로드 처리, `multipart/form-data`, `multer` 미들웨어, 정적 파일 제공, 파일 저장 구조 설계
+> 
+
+---
+
+## 📝 핵심 개념 요약
+
+- `Content-Type` 헤더는 요청 body의 데이터 타입을 명시하는 속성
+- `application/json` → JSON 데이터 전송
+- `multipart/form-data` → 파일 업로드용 포맷 (텍스트 + 바이너리 혼합 가능)
+- 파일 전송 방식
+    
+    1️⃣ Data URL로 인코딩 (비효율적, 크기 증가)
+    
+    2️⃣ **multipart/form-data** 방식 (FormData 객체 활용)
+    
+- `multer` 미들웨어: multipart 요청을 처리해 서버의 특정 폴더에 파일 저장 가능
+- `express.static()` : 업로드된 파일을 **URL 경로로 직접 접근 가능하게 설정**
+- 실제 서비스에서는 서버 내부 저장 대신 **AWS S3 등 외부 스토리지에 저장하고, DB엔 URL만 저장**
+
+## 📊 핵심 요약 표
+
+| 구분 | 기능 / 역할 | 주요 키워드 | 비고 |
+| --- | --- | --- | --- |
+| **Content-Type** | body 데이터 타입 명시 | `application/json`, `multipart/form-data` | 파일 업로드 시 필수 |
+| **FormData()** | multipart 형식 데이터 구성 | `append("image", file)` | fetch로 전송 |
+| **multer** | multipart 데이터 파싱 및 저장 | `upload.single("file")` | 파일 서버 저장 |
+| **express.static()** | 업로드 파일 제공 | `app.use("/image", express.static("uploads"))` | 정적 파일 제공 경로 |
+| **AWS S3** | 외부 스토리지 저장소 | `Presigned URL`, `Storage API` | 실제 서비스용 |
+| **DB 저장 방식** | 이미지 원본 대신 URL 저장 | `image_url` | 공간 효율적 |
+
+### 💻 실습 내용 정리
+
+### ✅ 1️⃣ Data URL로 파일 업로드 (비추천 방식)
+
+```jsx
+const reader = new FileReader();
+reader.onload = function (event) {
+  const dataURL = event.target.result;
+  fetch('/upload', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ image: dataURL, fileName: file.name }),
+  });
+};
+reader.readAsDataURL(file);
+```
+
+> ⚠️ 파일을 텍스트로 인코딩하면 용량이 30% 이상 증가하므로 작은 파일에만 적합.
+> 
+
+---
+
+### ✅ 2️⃣ multipart/form-data 방식 (FormData 사용)
+
+```html
+<form id="uploadForm" enctype="multipart/form-data">
+  <input type="file" id="fileInput" name="file" />
+  <button type="button" onclick="uploadFile()">업로드</button>
+</form>
+
+<script>
+function uploadFile() {
+  const file = document.getElementById("fileInput").files[0];
+  const formData = new FormData();
+  formData.append("image", file);
+
+  fetch("https://panda-market-api.vercel.app/images/upload", {
+    method: "POST",
+    body: formData,
+    headers: { Authorization: `Bearer ${accessToken}` },
+  });
+}
+</script>
+```
+
+---
+
+### ✅ 3️⃣ 서버에서 `multer` 사용
+
+```jsx
+import express from "express";
+import multer from "multer";
+
+const app = express();
+const upload = multer({ dest: "uploads/" });
+
+app.post("/files", upload.single("imgs"), (req, res) => {
+  console.log(req.file);
+  res.json({ message: "파일 업로드 완료" });
+});
+```
+
+---
+
+### ✅ 4️⃣ 정적 파일 제공 (`express.static`)
+
+```jsx
+app.use("/image", express.static("uploads"));
+
+app.post("/image", upload.single("attachment"), (req, res) => {
+  const path = `/image/${req.file.filename}`;
+  res.json({ message: "파일 업로드 완료", path });
+});
+```
+
+> /image/파일명으로 브라우저 접근 시 업로드된 파일을 바로 확인 가능.
+> 
+
+---
+
+### ✅ 5️⃣ 실제 서비스 파일 저장 구조
+
+- 서버 저장은 한계 → **클라우드 스토리지 (AWS S3, GCP Storage)** 사용
+- DB에는 이미지 URL만 저장
+
+```
+📁 uploads/
+├── abc123.jpg (실제 파일)
+📄 DB
+└── image_url: "https://s3.amazonaws.com/bucket/abc123.jpg"
+```
+
+> ⚙️ 실무에서는 서버 부하 절감 + 확장성 확보를 위해 “클라이언트가 S3로 직접 업로드(Presigned URL)” 방식 사용
+> 
+
+### ❗ 헷갈렸던 점 / 문제 해결:
+
+- **헷갈렸던 점:**
+    
+    multipart 형식이 자동으로 설정되는지, 직접 `Content-Type`을 지정해야 하는지 혼동됨.
+    
+- **문제 해결:**
+    
+    `FormData`를 사용하면 브라우저가 자동으로 boundary를 포함한 `multipart/form-data` 헤더를 설정함을 확인.
+    
+    직접 지정할 필요 없음.
+    
+
+### 💡 느낀 점 / 배운 점:
+
+- 파일 업로드는 단순히 서버에 저장하는 기능이 아니라, **저장 위치와 데이터 관리 전략**이 함께 설계되어야 함을 깨달음.
+- Express의 `multer`, `express.static` 덕분에 업로드와 파일 제공이 간단하지만, 실무에서는 **AWS S3와 같은 외부 저장소 사용이 필수적**임을 이해함.
+- 클라우드 스토리지를 이용하면 **트래픽, 저장공간, 비용 면에서 훨씬 효율적**이라는 점을 배움.
+
+### 🏷️ 키워드 (태그):
+
+`#Express` `#파일업로드` `#multipart` `#multer` `#FormData` `#ContentType` `#expressStatic` `#AWS` `#S3` `#PresignedURL` `#서버구조` `#NodeJS`
+
+| 날짜 | 주제 | 핵심 요약 | 실습 내용 | 문제 해결 / 느낀 점 | 키워드 태그 | 복습 필요 |
+| --- | --- | --- | --- | --- | --- | --- |
+| 2025-10-15 | 파일 업로드 | multipart/form-data와 multer를 활용한 파일 업로드 및 정적 파일 제공 | FormData, multer, express.static 실습 | multipart 헤더 자동 설정 여부 헷갈림 → FormData로 해결 | `#Express` `#multer` `#FormData` `#파일업로드` `#AWS` `#S3` | ✅ |
