Update 14 키보드 이벤트 정리.md

--- a/Study Notes/14 키보드 이벤트 정리.md
+++ b/Study Notes/14 키보드 이벤트 정리.md
@@ -67,7 +67,7 @@
 | 연산자 | 설명 |
 | --- | --- |
 | `&&` | 앞이 truthy → 뒤 리턴 / 앞이 falsy → 앞 리턴 |
-| `||`  | 앞이 truthy → 앞 리턴/ 앞이 falsy → 뒤 리턴 |
+| `\|\|` | 앞이 truthy → 앞 리턴 / 앞이 falsy → 뒤 리턴 |
 | `??` | 앞이 null/undefined → 뒤 리턴, 아니면 앞 리턴 |
 
 ### ✅ 변수 선언 차이
